# gt-gdrive-cli

./: .gitignore  CLAUDE.md  README.md  marketplace.json  pyproject.toml
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
docs/: CREDENTIALS.md
skills/gdrive/: SKILL.md
skills/gdrive-analyze/: SKILL.md
src/gdrive_unified/: __init__.py  config.py  credentials.py
src/gdrive_unified/analyzer/: __init__.py  document_analyzer.py  pattern_matcher.py
src/gdrive_unified/cli/: __init__.py  analyze.py  download.py  manage.py  search.py  upload.py
src/gdrive_unified/drive/: __init__.py  drive_downloader.py  drive_searcher.py  drive_uploader.py  file_converter.py  pandoc_uploader.py  relationship_tracker.py
src/gdrive_unified/gui/: __init__.py  __main__.py  main_window.py
src/gdrive_unified/gui/tabs/: __init__.py  download_tab.py  manage_tab.py  search_tab.py  settings_tab.py
src/gdrive_unified/gui/widgets/: __init__.py  file_browser.py  log_panel.py  results_table.py
src/gdrive_unified/gui/workers/: __init__.py  download_worker.py  manage_worker.py  search_worker.py  shortcut_worker.py
src/gdrive_unified/templates/: __init__.py  aar.py  base_template.py
src/gdrive_unified/utils/: __init__.py  file_utils.py  logging.py
tests/: __init__.py  test_cli_smoke.py  test_config.py  test_credentials.py
